@@ -54,9 +54,6 @@ import com.sun.tools.javac.api.JavacTrees;
 import com.sun.tools.javac.code.Symbol;
 import com.sun.tools.javac.code.TypeAnnotations.AnnotationType;
 import com.sun.tools.javac.parser.Tokens.TokenKind;
-import com.sun.tools.javac.tree.JCTree.JCClassDecl;
-import com.sun.tools.javac.tree.JCTree.JCMethodDecl;
-import com.sun.tools.javac.tree.JCTree.JCVariableDecl;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
@@ -150,33 +147,33 @@ public final class AnnotationPosition extends BugChecker
   }
 
   /** Tokenizes as little of the {@code tree} as possible to ensure we grab all the annotations. */
-  private static List<ErrorProneToken> annotationTokens(
+  private static ImmutableList<ErrorProneToken> annotationTokens(
       Tree tree, VisitorState state, int annotationEnd) {
     int endPos;
-    if (tree instanceof JCMethodDecl methodTree) {
+    if (tree instanceof MethodTree methodTree) {
       if (methodTree.getReturnType() != null) {
         endPos = getStartPosition(methodTree.getReturnType());
       } else if (!methodTree.getParameters().isEmpty()) {
-        endPos = getStartPosition(methodTree.getParameters().get(0));
+        endPos = getStartPosition(methodTree.getParameters().getFirst());
         if (endPos < annotationEnd) {
           endPos = state.getEndPosition(methodTree);
         }
       } else if (methodTree.getBody() != null && !methodTree.getBody().getStatements().isEmpty()) {
-        endPos = getStartPosition(methodTree.getBody().getStatements().get(0));
+        endPos = getStartPosition(methodTree.getBody().getStatements().getFirst());
       } else {
         endPos = state.getEndPosition(methodTree);
       }
-    } else if (tree instanceof JCVariableDecl variableTree) {
+    } else if (tree instanceof VariableTree variableTree) {
       endPos = getStartPosition(variableTree.getType());
       if (endPos == -1) {
         // handle 'var'
         endPos = state.getEndPosition(variableTree.getModifiers());
       }
-    } else if (tree instanceof JCClassDecl classTree) {
+    } else if (tree instanceof ClassTree classTree) {
       endPos =
           classTree.getMembers().isEmpty()
               ? state.getEndPosition(classTree)
-              : classTree.getMembers().get(0).getStartPosition();
+              : getStartPosition(classTree.getMembers().getFirst());
     } else {
       throw new AssertionError();
     }
